[package]
name = "connexa"
version = "0.1.0-alpha"
edition = "2024"
license = "Apache-2.0 OR MIT"
authors = ["Darius Clark"]
exclude = [".gitignore"]
description = "High level abtraction of rust-libp2p"
readme = "README.md"
repository = "https://github.com/dariusc93/connexa"

[features]
default = ["stream", "rsa", "dns", "ed25519", "secp256k1", "ecdsa", "tls", "noise", "tcp", "quic", "pnet", "websocket"]

rsa = ["libp2p/rsa"]
ed25519 = ["libp2p/ed25519"]
secp256k1 = ["libp2p/secp256k1"]
ecdsa = ["libp2p/ecdsa"]

stream = ["dep:libp2p-stream"]

dns = ["libp2p/dns"]
tls = ["libp2p/tls"]
noise = ["libp2p/noise"]
tcp = ["libp2p/tcp"]
quic = ["libp2p/quic"]
pnet = ["libp2p/pnet"]

webrtc = ["dep:libp2p-webrtc", "dep:libp2p-webrtc-websys"]
websocket = ["libp2p/websocket", "libp2p/websocket-websys"]
webtransport = ["libp2p/webtransport-websys"]

[workspace]
members = [ "examples/distributed-key-value-store", "examples/file-sharing","examples/gossipsub"]

[workspace.dependencies]
async-rt = "0.1.5"
async-trait = { version = "0.1.88" }
bytes = "1.10.1"
either = "1.15.0"
futures = { version = "0.3.31" }
futures-timeout = "0.1.2"
futures-timer = "3.0.0"
getrandom = { version = "0.2.15" }
hickory-resolver = "0.25.0-alpha.5"
indexmap = "2.9.0"
libp2p = { version = "0.55.0" }
libp2p-allow-block-list = "0.5.0"
libp2p-connection-limits = "0.5.0"
libp2p-stream = { version = "0.3.0-alpha" }
libp2p-webrtc = { version = "=0.9.0-alpha", features = ["pem"] }
libp2p-webrtc-websys = "0.4.0"
pollable-map = "0.1.5"
pem = { version = "3.0.5" }
rand = "0.8.5"
rcgen = { version = "0.13.2", features = ["pem", "x509-parser"] }
rlimit = "0.10.2"
send_wrapper = "0.6.0"
serde = { version = "1.0.219" }
serde-wasm-bindgen = "0.6.5"
tracing = { version = "0.1.41" }
tracing-futures = { features = ["futures-03"], version = "0.2.5" }

tokio = { default-features = false, version = "1.44.2" }
tokio-stream = { default-features = false, version = "0.1.17" }
tokio-util = { default-features = false, version = "0.7.14" }
wasm-bindgen-futures = { version = "0.4.50" }
web-time = "1.1.0"
zeroize = "1.8.1"


[dependencies]
async-rt.workspace = true
async-trait.workspace = true
bytes = { workspace = true }
either.workspace = true
futures-timeout.workspace = true
futures.workspace = true
indexmap.workspace = true
libp2p-allow-block-list.workspace = true
libp2p-connection-limits.workspace = true
libp2p-stream = { workspace = true, optional = true }
pem.workspace = true
pollable-map.workspace = true
rand.workspace = true
rcgen.workspace = true
serde = { features = ["derive"], workspace = true }
tracing = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures-timer.workspace = true
libp2p = { features = ["gossipsub", "floodsub", "autonat", "relay", "dcutr", "identify", "kad", "macros", "tokio", "ping", "yamux", "mdns", "serde", "request-response", "json", "cbor", "rendezvous", "upnp"], workspace = true }
libp2p-webrtc = { workspace = true, features = ["tokio"], optional = true }
hickory-resolver.workspace = true
rcgen = { workspace = true, optional = true }
rlimit.workspace = true
tokio = { features = ["full"], workspace = true }
tokio-stream = { workspace = true, features = ["fs"] }
tokio-util = { workspace = true, features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
futures-timer = { workspace = true, features = ["wasm-bindgen"] }
getrandom = { workspace = true, features = ["js"] }
libp2p = { features = ["gossipsub", "floodsub", "autonat", "relay", "identify", "kad", "noise", "macros", "ping", "yamux", "serde", "request-response", "json", "cbor", "rendezvous", "wasm-bindgen"], workspace = true }
libp2p-webrtc-websys = { workspace = true, optional = true }
send_wrapper.workspace = true
serde-wasm-bindgen.workspace = true
tokio = { default-features = false, features = ["sync", "macros"], workspace = true }
tokio-stream = { workspace = true, default-features = false }
tokio-util = { workspace = true, default-features = false }
wasm-bindgen-futures.workspace = true
