[package]
name = "custom-transport"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
futures.workspace = true
connexa = { path = "../../", default-features = false, features = ["ed25519", "yamux", "noise", "ping"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }