[package]
name = "distributed-key-value-store"
version = "0.1.0"
edition = "2024"
publish = false

[package.metadata.release]
release = false

[dependencies]
tokio.workspace = true
futures.workspace = true
pollable-map = "0.1.7"
connexa = { path = "../../" }
clap = { version = "4.5.39", features = ["derive"] }
rustyline-async = { version = "0.4.6" }
