[package]
name = "file-sharing-request-response"
version = "0.1.0"
edition = "2024"
publish = false

[package.metadata.release]
release = false

[dependencies]
tokio.workspace = true
futures.workspace = true
connexa = { path = "../../", default-features = false, features = ["ed25519", "tcp", "quic", "yamux", "noise", "request-response"] }
clap = { version = "4.5.39", features = ["derive"] }
