[package]
name = "gossipsub-example"
version = "0.1.0"
edition = "2024"
publish = false

[package.metadata.release]
release = false

[dependencies]
tokio.workspace = true
futures.workspace = true
connexa = { path = "../../", default-features = false, features = ["ed25519", "tcp", "quic", "yamux", "noise", "gossipsub"] }
clap = { version = "4.5.39", features = ["derive"] }
rustyline-async = { version = "0.4.6" }
